# geojson_to_shp

./: .gitignore  Cargo.toml  LICENSE  README.md
fixtures/: countries.geojson  lines.geojson  points.geojson  test.dbf
src/: converter.rs  lib.rs  main.rs
