[package]
name = "geojson_to_shp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geo-types = "0.7.2"
geojson = { version = '0.22.2', features = ["geo-types"] }
shapefile = { version = '0.3.0', features = ["geo-types"] }
serde_json = "1.0.74"